sas-core/main/default/objects/IRR_SMS__c/IRR_SMS__c.object-meta.xml
<CustomObject>
    <description>Holds SMS MO (Mobile originated) forwarded from SFMC</description>
    <label>SMS</label>
    <nameField>
        <label>SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS&#39;</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>