sas-core/main/default/objects/IRR_SMS__c/fields/compositeId__c.field-meta.xml
<CustomField>
    <fullName>compositeId__c</fullName>
    <label>compositeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>