sas-core/main/default/objects/IRR_SMS__c/fields/dateUTC__c.field-meta.xml
<CustomField>
    <fullName>dateUTC__c</fullName>
    <label>dateUTC</label>
    <type>Date</type>
</CustomField>