sas-core/main/default/objects/IRR_SMS__c/fields/definitionKey__c.field-meta.xml
<CustomField>
    <fullName>definitionKey__c</fullName>
    <label>DefinitionKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>