sas-core/main/default/objects/IRR_SMS__c/fields/eventCategoryType__c.field-meta.xml
<CustomField>
    <fullName>eventCategoryType__c</fullName>
    <label>eventCategoryType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>