sas-core/main/default/objects/IRR_SMS__c/fields/info_from__c.field-meta.xml
<CustomField>
    <fullName>info_from__c</fullName>
    <label>Info_from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>