sas-core/main/default/objects/IRR_SMS__c/fields/info_message__c.field-meta.xml
<CustomField>
    <fullName>info_message__c</fullName>
    <label>info_message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>