sas-core/main/default/objects/IRR_SMS__c/fields/info_message_Nouns__c.field-meta.xml
<CustomField>
    <fullName>info_message_Nouns__c</fullName>
    <label>info message Nouns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>