sas-core/main/default/objects/IRR_SMS__c/fields/Info_messageVerb__c.field-meta.xml
<CustomField>
    <fullName>Info_messageVerb__c</fullName>
    <label>Info_messageVerb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>